--- a/package.json
+++ b/package.json
@@ -20,19 +20,26 @@
     "@types/react-dom": "18.2.7",
     "@vinejs/vine": "^1.5.1",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1691.0",
+    "aws-sdk-mock": "^6.2.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "crypto-random-string": "^5.0.0",
     "cryptr": "^6.3.0",
+    "eslint-config-next": "^14.2.15",
+    "fs": "^0.0.1-security",
     "mongodb": "^5.7.0",
+    "mongodb-client-encryption": "^2.9.1",
     "mongoose": "^7.3.4",
-    "next": "13.4.10",
+    "next": "^14.2.15",
     "next-auth": "^4.22.1",
+    "nock": "^13.5.5",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.26",
     "razorpay": "^2.9.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-email": "1.9.4",
     "react-toastify": "^9.1.3",
     "rippleui": "^1.12.1",
@@ -40,6 +47,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/nodemailer": "^6.4.11"
   }
